--- a/beta/chapter3.tex
+++ b/beta/chapter3.tex
@@ -1,10 +1,10 @@
 \chapter{Method}
 
-The work with this thesis can be divided into two parts, the first being reading litterature regarding the Semantic Web, Linked Data and related subjects. The litterature also included reading many articels, blog post and watching podcasts,\footnote{TODO, links to references, podcasts etc.} that were great to get a better understaning of the concept and importance of a more semantic web.\\\\  
+The work with this thesis can be divided into two parts, the first being reading litterature regarding the Semantic Web, Linked Data and related subjects. The litterature also included reading many articels, blog post and watching podcasts,\footnote{References can be found in the bibliography and in footnotes when mentioned throughout the thesis.} that were great to get a better understaning of the concept and importance of a more semantic web.\\\\  
 The second part was to create a prototyp. Before I started to work on that I looked at the existing system, and tried to get some understanding of what steps the process went through. At this point a I got a lot of guidence from Magnus at Notisum, the author of the existing code. He explained the necessary steps and why they are important for the end result. However I didn't spend to much time on the old code, since I needed to create something different (and take factors such as semantics into mind).\\ With no background or knowledge in law it can be quite hard to understand the structure of laws and references between them. That is something I picked up as work went along with the prototype, many times I had to stop and try to figure out what I tried to do and why. 
 
 \section{Methodology}
-I devloped the prototype in several iterations, a simplfied version of agile.\footnote{Agile ... TODO} The first step was to get the program to read downloaded documents and save them as a new file. After that was in place, I always had a running prototype that would go through all files in a specified folder and apply transformations to them before saving them with a new exstension. This way I could add new functionality and try it out right away. I tried to put general functions and helpers seperate from SFS-specific logic so that it is possible to reuse a lot of the code when other legal sources needs to be implemented.     
+I devloped the prototype in several iterations, a simplfied version of agile.\footnote{\url{http://en.wikipedia.org/wiki/Agile_software_development}} The first step was to get the program to read downloaded documents and save them as a new file. After that was in place, I always had a running prototype that would go through all files in a specified folder and apply transformations to them before saving them with a new exstension. This way I could add new functionality and try it out right away. I tried to put general functions and helpers seperate from SFS-specific logic so that it is possible to reuse a lot of the code when other legal sources needs to be implemented.     
 
 \section{Existing system}
 Below follows a short description of the steps the process goes through today. The steps in blue bubbles (first and last) are written in C\# and could with minor modifications be used together with the prototype. The two steps in pink bubbles (second step which is split in two different parts and the third step) are programs written in Pascal and will be replaced by the prototype. Then there's a green bubble (fourth step) which also with some modifications, could be reused with the output from the prototype.   
@@ -12,10 +12,10 @@ Below follows a short description of the steps the process goes through today. T
 \includegraphics[scale=0.6]{../imgs/oldSystemChart.png}
 \captionof{figure}{Chart describing the existing process}
 \end{center}
-For the sake of simplicity lets say we are only handling SFS laws\footnote{In reality the program handles all kind of legal source documents.}. First we have a module that handles the actual downloading of the legal source files, (full text and register files\footnote{TODO, explain Registerfile} for each law) this part is written in C\# and could be reused\footnote{This part just have to download the files, then the prototype can do it's magic on those files.} for the prototype. Next we have two programs that for each law converts the downloaded files to very simple XML files, one for the full text and one for the registerfile. The next step is also an XML transformation, it takes the simple XML files and turns them into more comprehensive XML files. Now it's time to create files that can be viewed in a browser, this is done in several steps where data structures containing information regarding the laws are created with information like paragraph references and links. In the end a SHTML\footnote{TODO, explain SHTML} file that is ready to be published with this information is created. The final step is to export these files (and other legal source documents) to databases and update the website to display the newly created or updated files.
+For the sake of simplicity lets say we are only handling SFS laws\footnote{In reality the program handles all kind of legal source documents.}. First we have a module that handles the actual downloading of the legal source files, (full text and register files for each law) this part is written in C\# and could be reused\footnote{This part just have to download the files, then the prototype can do it's magic on those files.} for the prototype. Next we have two programs that for each law converts the downloaded files to very simple XML files, one for the full text and one for the registerfile. The next step is also an XML transformation, it takes the simple XML files and turns them into more comprehensive XML files. Now it's time to create files that can be viewed in a browser, this is done in several steps where data structures containing information regarding the laws are created with information like paragraph references and links. In the end a SHTML\footnote{\url{http://www.computerhope.com/jargon/s/shtml.htm}} file that is ready to be published with this information is created. The final step is to export these files (and other legal source documents) to databases and update the website to display the newly created or updated files.
 
 \subsection{Output}
-The resulting file will look something like the code example below, that is describing paragraph 4, section 1 from the \textit{Home Guard regulation} (1997:146).\\
+The resulting file will look something like the code example below, that is describing paragraph 4, section 1 from the \textit{Home Guard regulation} (1997:146).\footnote{This statute will return as an example later on in the thesis}\\
 \begin{minted}[bgcolor=bg]{html}
 <a name="4"></a>
 <p><a name="P4"></a>
@@ -31,7 +31,7 @@ As we can see the only markup that is done to the document is regular HTML marku
 \section{Prototype}
 The main differences between the old system and the prototype will be: 
 \begin{itemize}
-\item Language, the prototype is written in Python\footnote{TODO, something about python} which is a object oriented\footnote{something about OO} languge that is well suited for tasks like this one. It is easy to divide the code into separate modules that handle different tasks. Furthermore it is convinient to work with (apply transformations etc.) objects such as whole documents, paragraphs etc. 
+\item Language, the prototype is written in Python\footnote{\url{www.python.org}} which is a object oriented\footnote{\url{http://www.webopedia.com/TERM/O/object_oriented_programming_OOP.html}} languge that is well suited for tasks like this one. It is easy to divide the code into separate modules that handle different tasks, create relationships that allows objects to inherit from other objects. Furthermore it is convinient to work with (apply transformations etc.) objects such as whole documents, paragraphs etc. 
 \item Follows standards proposed by Rättsinformationsprojektet for legal documents.   
 \item The generated files will be marked up with RDF to contribute to a more semantic web. 
 \end{itemize} 
