--- a/beta/chapter7.tex
+++ b/beta/chapter7.tex
@@ -1,3 +1,103 @@
-\chapter*{Bibliography}
+\begin{thebibliography}{9}
 
-[1] Ted Talk video about Linked Data with Tim Berners-Lee \url{http://www.ted.com/talks/tim_berners_lee_on_the_next_web.html}
+\bibitem{regeringBib}
+\emph{Regeringskansliets Rättsdatabaser}\\
+\url{http://62.95.69.15/}\\ 
+2012-09-09
+
+\bibitem{lagrumBib}
+\emph{Lagrummet.se - Portalen till svensk rättsinformation}\\
+\url{http://www.lagrummet.se/}\\ 
+2012-09-09
+
+\bibitem{dublinBib}
+\emph{Dublin Core Metadata Element Set}\\
+\url{http://dublincore.org/documents/dces/}\\ 
+2012-12-25
+
+\bibitem{semWebBib}
+\emph{The Semantic Web Intro, Presentation 2011-04-04}\\
+Fariz Darari\\
+\url{http://www.slideshare.net/fadirra/semantic-web-intro-040411}\\ 
+2012-12-25
+
+\bibitem{rdfIntroBib}
+\emph{Introducing RDF}\\
+\url{http://www.linkeddatatools.com/introducing-rdf-part-2}\\ 
+2012-12-23
+
+\bibitem{rdfaBib}
+\emph{XHTML and RDF W3C Note 14 February 2004}\\
+World Wide Web Consortium\\
+\url{http://www.w3.org/MarkUp/2004/02/xhtml-rdf.html}\\ 
+2012-12-23
+
+\bibitem{rdfaBib2}
+\emph{RDFa in XHTML: Syntax and Processing - W3C Recommendation.}\\
+Adida, B., et al.\\
+\url{http://www.w3.org/TR/rdfa-syntax/}\\ 
+2012-12-23
+
+\bibitem{semanticIntroBib}
+\emph{Introducing Linked Data And The Semantic Web}\\
+\url{http://www.linkeddatatools.com/semantic-web-basics}\\ 
+2012-12-23
+
+\bibitem{LinkedTimBib}
+\emph{Linked Data—The Story So Far (2011-07-05)}\\
+Christian Bizer, Tom Heath, Tim Berners-Lee\\
+\url{http://tomheath.com/papers/bizer-heath-berners-lee-ijswis-linked-data.pdf}\\
+2012-12-25
+
+\bibitem{LinkedTimBib2}
+\emph{Linked Data (2006-07-27)}\\
+Tim Berners-Lee
+\url{http://www.w3.org/DesignIssues/LinkedData.html}\\ 
+2012-12-25
+
+\bibitem{linkEssBib}
+\emph{Linked Open Data: The Essentials}\\
+Florian Bauer, Martin Kaltenböck\\
+ISBN: 978-3-902796-05-9\\
+\url{http://www.semantic-web.at/LOD-TheEssentials.pdf}\\ 
+2012-12-25
+
+\bibitem{lagrumBib2}
+\emph{Introduktion till rättsinformationssystemet}\\
+Domstolsverket, Sveriges Domstolar\\
+\url{http://dev.lagrummet.se/dokumentation/introduktion/intro-beslutsfattare.pdf}\\ 
+2012-12-25
+
+\bibitem{publishBib}
+\emph{How to Publish Linked Data on the Web}\\
+Chris Bizer, Richard Cyganiak, Tom Heath\\
+\url{http://wifo5-03.informatik.uni-mannheim.de/bizer/pub/LinkedDataTutorial/}\\
+2012-12-23
+
+\bibitem{n3Bib}
+\emph{Notation3 (N3) A readable RDF syntax}\\
+Tim Berners-Lee\\
+\url{http://www.w3.org/DesignIssues/Notation3.html}\\
+2012-12-23
+
+\bibitem{pythonBib}
+\emph{Text Processing in Python (chapter 4)}\\
+David Mertz\\
+ISBN: 978-0321112545\\
+\url{http://gnosis.cx/TPiP/}\\ 
+2006-06-07
+
+\bibitem{regexpBib}
+\emph{Tutorialspoint - Python Regular Expressions}\\
+\url{http://www.tutorialspoint.com/python/python_reg_expressions.htm}\\ 
+2012-09-09
+
+\bibitem{uriBib}
+\emph{Uris, urls, and urns: Clarification and recommendations 1.0.}\\
+T. Coates, D. Connolly, D. Dack, L. Daigle, R. Denenberg, M. Dürst, P. Grosso,
+S. Hawke, R. Iannella, G. Klyne, L. Masinter, M. Mealling, M. Needleman,
+and N. Walsh.\\
+\url{http://www.w3.org/TR/uri-clarification/}\\ 
+2012-12-23
+
+\end{thebibliography}
